# crib_engine

./: .env  .gitignore  pyproject.toml  pytest.ini  requirements.txt  temp_debug.py  temp_debug2.py  to do.txt
cribbage/: board.py  constants.py  crib_strategies.py  cribbagegame.py  cribbageround.py  database.py  game_state.py  models.py  pegging_strategies.py  player.py  playingcards.py  playingcards_old.py  scoring.py  scoring_old.py  state.py  utils.py
cribbage/players/: base_player.py  beginner_player.py  hard_player.py  medium_player.py  play_first_card_player.py  (+2 more)
scripts/: calculate_exact_crib_values_by_brute_force.py  debug_winrate.py  find_beginner_medium_discard_differences.py  find_strategy_discard_differences.py  generate_all_possible_crib_hand_scores.py  generate_all_possible_crib_hand_scores_old.py  quick_experiment.py
test/: conftest.py  test_cribbagegame.py  test_jack_match_starter_suit.py  test_playingcards.py  test_random_player.py  test_round.py  test_score_points.py  test_scoring.py  test_scoring_double_run_fifteens.py  test_scoring_flush.py  test_scoring_runs_pairs_fifteens.py
tests/: conftest.py  test_beginner_player.py  test_benchmark_discard_strategies.py  test_benchmark_pegging_strategies.py  test_benchmark_players.py  test_crib_strategies.py  test_cribbagegame.py  test_end_game.py  test_go_scenarios.py  test_hard_player.py  test_imported_tests.py  test_medium_player.py  test_pegging_strategies.py  test_possible_hand_score_calcs.py  test_random_player.py  test_round.py  test_score_hand.py  test_scoring.py  test_scoring_double_run_fifteens.py
(+3 files in other folders)
