[project]
name = "cribbage-engine"
version = "1.0.0"
description = "Shared cribbage game logic"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cribbage*"]
