[project]
name = "cribbage-engine"
version = "1.0.3"
description = "Shared cribbage game logic"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5"
]
[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cribbage*"]
